<resources>
    <string name="app_name" translatable="false">StopInfo</string>

    <string name="permission_request_dialog_title">Permission required</string>
    <string name="permission_request_dialog_text">You need to grant access to the following permissions:\n</string>
    <string name="permission_request_dialog_positive_option_title">OK</string>
    <string name="permission_request_dialog_negative_option_title">Cancel</string>
    <string name="permission_group_info_prefix" translatable="false">&#8226;\t\t</string>

    <string name="activity_main_info_got_it">Got it</string>

    <string name="fragment_map_station_search_button_label">Search nearby</string>

    <string name="fragment_station_search_search_hint">Search</string>

    <string name="fragment_network_selection_select_btn_title">Select</string>

    <string name="network_list_header_title_select">Please select a network</string>
    <string name="network_list_header_title_nothing_found">Unfortunately there are no networks available</string>

    <string name="station_list_header_title_last_viewed_on_map">Last viewed on map</string>
    <string name="station_list_header_title_nothing_found">Nothing found</string>
    <string name="station_list_header_title_search_results">Search results</string>

    <string name="network_selection_dest_label">Network selection</string>
    <string name="map_dest_label">Map</string>
    <string name="station_list_dest_label">List</string>
    <string name="station_detail_dest_label">Station details</string>
    <string name="more_dest_label">More</string>

    <string name="info_search_for_nearby_stations_zoom">Zoom in to re-enable the search button</string>
    <string name="info_tap_departure_list_item_to_show_details">Tap an item of the list to show more details</string>

    <string name="error_location_permission_unavailable">Location permission not granted</string>
    <string name="error_data_loading_stations_by_name">Error while searching for stations</string>
    <string name="error_data_loading_stations_by_coordinate">Error while searching for stations</string>
    <string name="error_data_loading_departures_by_origin_station">Error while searching for departures</string>
    <string name="error_data_loading_available_networks">Error while loading available networks</string>
    <string name="error_retry_label">Retry</string>

    <string name="departure_line_direction_from_title_text">From:</string>
    <string name="departure_line_direction_route_details_title_text">Route:</string>
    <string name="departure_list_item_departure_time_now">Now</string>

    <plurals name="departure_list_item_departure_time_in_minutes">
        <item quantity="one">In %d minute</item>
        <item quantity="other">In %d minutes</item>
    </plurals>

    <plurals name="departure_list_item_departure_time_before_minutes">
        <item quantity="one">Before %d minute</item>
        <item quantity="other">Before %d minutes</item>
    </plurals>

    <string name="departure_list_item_route_no_route">No information available</string>
    <string name="departure_list_header_title_upcoming_departures">Upcoming departures</string>
    <string name="departure_list_header_title_nothing_found">No upcoming departures available</string>

    <string name="view_no_data_text">There seems to be no data.\nDo you want to try loading again?</string>

    <string name="more_menu_entry_licenses">Licenses</string>
    <string name="more_menu_version_information">StopInfo v. %1$s (%2$s)</string>
    <string name="more_menu_rate_stop_info">Rate StopInfo on Google Play</string>
    <string name="more_menu_imprint">Imprint</string>
    <string name="more_menu_privacy_statement">Privacy</string>
    <string name="more_menu_contact_mail">Send feedback by mail</string>
    <string name="more_menu_contact_twitter">Send feedback by Twitter</string>
    <string name="more_menu_network_selection">@string/network_selection_dest_label</string>
</resources>
