<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/network_selection_dest">

    <fragment
        android:id="@+id/network_selection_dest"
        android:name="de.nickbw2003.stopinfo.networks.ui.selection.NetworkSelectionFragment"
        android:label="@string/network_selection_dest_label"
        tools:layout="@layout/fragment_network_selection">
        <action
            android:id="@+id/start_to_map"
            app:destination="@id/map_dest"
            app:popUpTo="@id/network_selection_dest"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/network_selection_to_map"
            app:popUpTo="@id/map_dest" />

        <argument
            android:name="NetworkSelection.IsStartDestination"
            app:argType="boolean"
            android:defaultValue="true" />
    </fragment>

    <fragment
        android:id="@+id/map_dest"
        android:name="de.nickbw2003.stopinfo.map.ui.MapFragment"
        android:label="@string/map_dest_label"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/map_to_station_detail"
            app:destination="@id/station_detail_dest" />
    </fragment>

    <fragment
        android:id="@+id/station_list_dest"
        android:name="de.nickbw2003.stopinfo.stations.ui.search.StationSearchFragment"
        android:label="@string/station_list_dest_label"
        tools:layout="@layout/fragment_station_search">
        <action
            android:id="@+id/station_list_to_station_detail"
            app:destination="@id/station_detail_dest" />
    </fragment>

    <fragment
        android:id="@+id/station_detail_dest"
        android:name="de.nickbw2003.stopinfo.stations.ui.detail.StationDetailFragment"
        android:label="@string/station_detail_dest_label"
        tools:layout="@layout/fragment_station_detail">

        <argument
            android:name="StationDetail.Station"
            android:defaultValue="@null"
            app:argType="de.nickbw2003.stopinfo.stations.data.models.Station" />
    </fragment>

    <fragment
        android:id="@+id/more_dest"
        android:name="de.nickbw2003.stopinfo.more.ui.MoreFragment"
        android:label="@string/more_dest_label"
        tools:layout="@layout/fragment_more" >
        <action
            android:id="@+id/more_to_network_selection"
            app:destination="@id/network_selection_dest" />
    </fragment>
</navigation>